# email-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  seed_data.py  streamlit_app.py
app/: agent.py  database.py  email_processor.py  email_provider.py  gmail_provider.py  llm_provider.py  meeting_detector.py  models.py  notification_system.py  utils.py
config/: email_config.py
examples/: email_processor_example.py
