[project]
name = "gmail-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.7.0",
    "apscheduler>=3.11.0",
    "arrow>=1.3.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.1",
    "langchain-google-genai>=0.0.3",
    "langchain-openai>=0.0.2",
    "openai>=1.0.0",
    "pyarrow==14.0.0",
    "pydantic>=2.4.2",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pytz>=2025.1",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.42.0",
    "uvicorn>=0.24.0",
    "watchdog>=6.0.0",
]
