[project]
name = "gmail-assistant"
version = "0.1.0"
description = "An intelligent email assistant powered by LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "arrow>=1.3.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.1",
    "langchain-google-genai>=0.0.3",
    "langchain-openai>=0.0.2",
    "openai>=1.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.29.0",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "config"]
